--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/router": "^20.0.0",
     "@tailwindcss/postcss": "^4.1.17",
     "@tanstack/angular-query-experimental": "^5.90.11",
+    "ngx-markdown": "^20.1.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.17",
